Attempt 3 with buildout